--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 }
 body{
     scroll-behavior: smooth;
+    text-align: center;
+    background-color: #ffffff;
 }
 .cabeçario{
     display:flex;
@@ -155,19 +157,23 @@ body{
   .menu-link a {
     display: inline-block;
     text-transform: capitalize;
-    color: var(--white);
-    background: var(--main-color);
+    border-radius: 10px;
+    color: #ffffff;
+    background-color: #b39480;
     padding: 10px 15px;
     transition: 0.4s ease-in-out;
-    border: 1px solid var(--main-color);
+    border: 2px solid #6d5549;
+    text-decoration: none;
   }
   .menu-link a:hover {
     background: transparent;
+    color: #6d5549;
   }
   .contact{
     overflow: hidden;
     padding-top: 10px;
     background-color: #866a56;
+    border-bottom: 2px #dfd0c3e6 solid;
     
 }
 .contact .row {
@@ -193,4 +199,71 @@ body{
   text-transform: uppercase;
   font-size: 2.8rem;
   color: white;
+}
+.contact .row form h2{
+  color: white;
+  padding-top: 20px;
+}
+.contact a{
+  color: white;
+  background-color: #b39480;
+  padding: 10px;
+  text-decoration: none;
+  border-radius: 10px;
+  transition: all 0.3s ease-out;
+}
+.contact a:hover{
+  background-color: #a4846e;
+}
+.Contato{
+  margin-bottom: 50px;
+}
+.footer-title{
+  color: #321f16;
+  margin-top: 1rem;
+  font-size: 30px;
+  
+}
+.footer {
+  background-color: #321f16;
+  background-image: url('../img/99.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  gap: 55px;
+  margin-top: 1rem;
+}
+.footer2 {
+  display: flex;
+  align-items: center;
+  gap: 35px;
+  justify-content: space-between;
+  background-color: #321f16;
+  padding: 50px;
+  opacity: 0.85;
+}
+.footer2 .footer2-logo {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 20px;
+}
+.footer2 .footer2-logo p {
+  color: white;
+  font-size: 1.1rem;
+  line-height: 2;
+}
+.footer2 .footer2-social ul {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  list-style: none;
+}
+.footer2 .footer2-social ul li a i {
+  
+  font-size: 4rem;
+  color: white;
+  padding: 1rem;
+  border-radius: 5px;
 }
