--- a/css/style.css
+++ b/css/style.css
@@ -279,13 +279,8 @@ body{
       padding-left: 0;
       border-left: none;
   }
-  .sobre {
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-  }
   .sobre li {
-      margin-left: 0;
+      margin-left: 5dvh;
       margin-top: 2dvh;
       font-size: 10pt;
   }
@@ -296,14 +291,16 @@ body{
   .menu-flex {
       flex-direction: column;
       width: 100%;
+      
   }
   .menu1 {
       width: 100%;
       margin-bottom: 15px;
   }
   .contact .row {
-      flex-direction: column;
       gap: 1rem;
+      flex-direction: column;
+      text-align: center;
   }
   .footer2 {
       flex-direction: column;
@@ -313,18 +310,56 @@ body{
 }
 
 @media (max-width: 480px) {
+  .letra {
+    display: none;
+  }
+  .cabeçario{
+    flex-direction: none;
+    padding: 0;
+  }
   .cabeçario h3 {
       font-size: 12pt;
   }
+  .cabeçario img{
+    height:40px; 
+    width:40px;
+  }
+ .sobre{
+  margin-left: -50px;
+ }
   .sobre li {
       font-size: 9pt;
-  }
+      display: flex;
+      padding-left: 20px;
+}
+.banner h1{
+  font-size: 14pt;
+}
   .banner button {
-      font-size: 12pt;
+      font-size: 10pt;
       padding: 6px;
   }
-  .menu1 h4 {
-      font-size: 1.2rem;
+  .bg-menu h2{
+    font-size: 14pt;
+  }
+  .bg-menu .heading span{
+    font-size: 13pt;
+
+  }
+  .menu1 h4{
+      font-size: 13pt;
+  }
+  .menu-link a{
+    font-size: 10pt;
+  }
+  .small-img{
+    display: none;
+  }
+  .contact .row form h3{
+    font-size: 19pt;
+  }
+  .contact .row form .Contato{
+    font-size: 10pt;
   }
   .footer-title {
       font-size: 24px;
