--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,9 @@
     padding: 0;
     margin: 0;
     font-family: "Poppins", sans-serif;
-    
+    scroll-behavior: smooth;
 }
 body{
-    scroll-behavior: smooth;
     text-align: center;
     background-color: #ffffff;
 }
@@ -71,9 +70,14 @@ body{
     margin-bottom: 20px;
     border-radius: 10px;
     border: transparent;
-    color: white;
+    
     transition: all 0.3s ease-out;
     cursor: pointer;
+    
+}
+.banner button a{
+  text-decoration: none;
+  color: white;
 }
 .banner button:hover{
     background-color: #8d7261;
@@ -267,6 +271,64 @@ body{
   padding: 1rem;
   border-radius: 5px;
 }
+.preloader {
+	position: fixed;
+	top: 0;
+	left: 0;
+	animation: spinz 1.35s linear infinite;
+	width: 100%;
+	height: 100%;
+	background-color: #fffefc;     
+	z-index: 100;
+  }
+  
+  .loader {
+	border: 16px solid #efeee8;
+	border-top: 16px solid #a4846e;
+	border-radius: 50%;
+	width: 120px;
+	height: 120px;
+	animation: spin 1.35s linear infinite;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -60px;
+	margin-left: -60px;
+  }
+
+  @keyframes spin {
+	0% {
+	  transform: rotate(0deg);
+	  opacity:1;
+	}
+	50% {
+	  transform: rotate(360deg);
+	  opacity:1;
+	}
+	75% {
+	  opacity:1;
+	  transform: rotate(180deg);
+	}
+	100% {
+	  transform: rotate(0deg);
+	  opacity:0;
+	}
+  }
+  
+  @keyframes spinz {
+	0% {
+	  opacity:1;
+	}
+	50% {
+	  opacity:1;
+	}
+	75% {
+	  opacity:1;
+	}
+	100% {
+	  opacity:0;
+	}
+  }
 @media (max-width: 768px) {
   .cabeçario {
       flex-direction: column;
