--- a/css/style.css
+++ b/css/style.css
@@ -63,14 +63,13 @@ body{
 
 .banner button{
     background-color: #b39480;
-    padding: 8px;
+    padding: 15px 30px;
     font-size: 14pt;
     margin-top: 10px;
     margin-left: 15px;
     margin-bottom: 20px;
-    border-radius: 10px;
+    border-radius: 15px;
     border: transparent;
-    
     transition: all 0.3s ease-out;
     cursor: pointer;
     
@@ -81,6 +80,8 @@ body{
 }
 .banner button:hover{
     background-color: #8d7261;
+    animation: scaleUp 0.8s ease-in;
+    transform: scale(1.01);
 }
 .banner img{
     width: 100%;
@@ -164,14 +165,16 @@ body{
     border-radius: 10px;
     color: #ffffff;
     background-color: #b39480;
-    padding: 10px 15px;
+    padding: 15px 30px;
     transition: 0.4s ease-in-out;
     border: 2px solid #6d5549;
     text-decoration: none;
+    font-size: 14pt;
   }
   .menu-link a:hover {
     background: transparent;
     color: #6d5549;
+    transform: scale(1.03);
   }
   .contact{
     overflow: hidden;
@@ -201,7 +204,7 @@ body{
 }
 .contact .row form h3 {
   text-transform: uppercase;
-  font-size: 2.8rem;
+  font-size: 2.5rem;
   color: white;
 }
 .contact .row form h2{
@@ -210,17 +213,25 @@ body{
 }
 .contact a{
   color: white;
+  display: inline-block;
   background-color: #b39480;
-  padding: 10px;
+  padding: 15px;
+  padding-inline: 30px;
   text-decoration: none;
   border-radius: 10px;
-  transition: all 0.3s ease-out;
+  font-size: 14pt;
+  transition: all 0.3s ease;
 }
 .contact a:hover{
   background-color: #a4846e;
+  animation: scaleUp 0.8s ease-in;
+  transform: scale(1.01);
 }
+
 .Contato{
   margin-bottom: 50px;
+  margin-left: 90px;
+  text-align: justify;
 }
 .footer-title{
   color: #321f16;
@@ -252,6 +263,7 @@ body{
   flex-direction: column;
   align-items: start;
   gap: 20px;
+  text-align: justify;
 }
 .footer2 .footer2-logo p {
   color: white;
@@ -295,7 +307,29 @@ body{
 	margin-top: -60px;
 	margin-left: -60px;
   }
-
+@keyframes scaleUp {
+  0% {
+    transform: scale(1); /* Tamanho inicial */
+  }
+  15% {
+    transform: scale(1.1); /* Aumenta 50% */
+  }
+  30% {
+    transform: scale(1); /* Volta ao tamanho inicial */
+  }
+  45%{
+    transform: scale(1.05);
+  }
+  60%{
+    transform: scale(1);
+  }
+  75%{
+    transform: scale(1.03);
+  }
+  100%{
+    transform: scale(1.02);
+  }
+}
   @keyframes spin {
 	0% {
 	  transform: rotate(0deg);
@@ -382,10 +416,23 @@ body{
       flex-direction: column;
       text-align: center;
   }
+  .Contato{
+    text-align: center;
+    margin-left: 0px;
+  }
+  .contact .row form h3{
+    font-size: 20pt;
+  }
+  .contact .row form .Contato{
+    font-size: 9pt;
+  }
   .footer2 {
       flex-direction: column;
       text-align: center;
       gap: 20px;
+  }
+  .footer2 .footer2-logo{
+    text-align: center;
   }
 }
 
@@ -437,7 +484,7 @@ body{
     display: none;
   }
   .contact .row form h3{
-    font-size: 19pt;
+    font-size: 17pt;
   }
   .contact .row form .Contato{
     font-size: 10pt;
